# django-log-formatter-asim

./: .gitignore  .pre-commit-config.yaml  .tool-versions  CHANGELOG.md  CODEOWNERS  README.md  SECURITY_CHECKLST.md  pyproject.toml  pytest.ini  tox.ini
.github/: labeler.yml  pull_request_template.md
.github/workflows/: label-pull-requests.yml  test.yml
django_log_formatter_asim/: __init__.py  ecs.py
django_log_formatter_asim/events/: __init__.py  account_management.py  authentication.py  common.py  file_activity.py
tests/: conftest.py  settings.py  test_django_log_formatter.py
tests/events/: common_events.py  conftest.py  test_common.py  test_log_account_management.py  test_log_authentication.py  test_log_file_activity.py
