[tool.black]
line-length = 100

[tool.poetry]
name = "django-log-formatter-asim"
version = "1.2.0"
description = "Formats Django logs in ASIM format."
authors = ["Department for Business and Trade Platform Team <sre-team@digital.trade.gov.uk>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "django_log_formatter_asim" }
]

[tool.poetry.dependencies]
python = ">=3.9,<4"
django = [
    { version = ">=3,<5", python = ">=3.9,<3.10" },
    { version = ">=3,<7", python = ">=3.10,<4" },
]
ddtrace = ">=3.2.1,<5"
django-ipware = "^7.0.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
pytest = "^7.4.3"
tox = "^4.11.3"
freezegun = "^1.5.2"
pytest-django = "^4.7.0"
importlib-metadata = "^6.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
